fixed white space, added MIT, added map, styling

--- a/oemtube/src/components/pages/Home/Home.scss
+++ b/oemtube/src/components/pages/Home/Home.scss
@@ -1,14 +1,14 @@
-.hexagon {
-  margin-top: 30px;
-padding: 30px;
-  height: 300px;
-  width: 300px;
-  text-align: center;
-  border-radius: 15px 50px;
-  border: solid#202631;
-  background-color: #374659;
-  // background-color: #B77333;
-}
+// .hexagon {
+//   margin-top: 30px;
+// padding: 30px;
+//   height: 300px;
+//   width: 300px;
+//   text-align: center;
+//   border-radius: 15px 50px;
+//   border: solid#202631;
+//   background-color: #374659;
+//   // background-color: #B77333;
+// }
 
 #distributorAssemblies-pichome {
   height: 200px;
